// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment_after.css - css-verify 1`] = `
---
title: Title
description: Description
---
/* comment */
.something {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

/* comment */
.something {
}

`;

exports[`dirty.css - css-verify 1`] = `
---
hello:     world
a:       
            - 123
            - 666
---

.class {



}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
hello: world
a:
  - 123
  - 666
---

.class {
}

`;

exports[`empty.css - css-verify 1`] = `
---
---

a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
---

a {
  color: red;
}

`;

exports[`empty_newlines.css - css-verify 1`] = `
---



---



a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
---

a {
  color: red;
}

`;

exports[`ignore.css - css-verify 1`] = `
---
hello: world
---

/* prettier-ignore */
.foo {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
hello: world
---

/* prettier-ignore */
.foo {}

`;

exports[`malformed.css - css-verify 1`] = `
---
aaa
b---

a {
    color: red;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- aaa b--- a {
  color: red;
}

`;

exports[`malformed-2.css - css-verify 1`] = `
---
foo: bar
---

a {
color:blue
}

---

.b {
color:red
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
foo: bar
---

a {
  color: blue;
}

--- .b {
  color: red;
}

`;

exports[`only_comments.css - css-verify 1`] = `
---
# comment 1
# comment 2
# comment 3
---

a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
# comment 1
# comment 2
# comment 3
---

a {
  color: red;
}

`;

exports[`with_comments.css - css-verify 1`] = `
---
title: Title
description: Description
# This is a comment
---

a {
    color: red;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
# This is a comment
---

a {
  color: red;
}

`;

exports[`without-newline-after.css - css-verify 1`] = `
---
title: Title
description: Description
---
a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;

exports[`yaml.css - css-verify 1`] = `
---
title: Title
description: Description
---

a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;

exports[`yaml.less - css-verify 1`] = `
---
title: Title
description: Description
---

a {
  color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;

exports[`yaml.scss - css-verify 1`] = `
---
title: Title
description: Description
---

a {
  color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;
